@@ -1,4 +1,14 @@
-﻿shmuel 22.01.2015 13:21:30 +0200 - build 4253
+﻿drkns 22.01.2015 23:13:47 +0200 - build 4254
+
+1. Показываем метки дисков из реестра при отсутствии физических.
+
+2. "Починим" загрузку плагинов c нетрадиционным расположением зависимых dll.
+
+3. Не закрываем quick search при потере фокуса, если OC новее, чем XP/2k3.
+
+4. Рефакторинг.
+
+shmuel 22.01.2015 13:21:30 +0200 - build 4253
 
 1. Рефакторинг.
 
